--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Vladyslav Pestsov<vladyslav.pestsov@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "typescript": "^5.3.3"
   }
 }
