--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/react": "^18.2.45",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
+    "postcss": "^8",
     "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "tsconfig-paths": "^4.2.0"
   }
 }
