feat(schema): implement `setApplication` hook with domain schema structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,13 +25,20 @@
       "@Server/Package/Types": ["./types/server/packages/packages.ts"],
 
       // Edge
-      "Edge/Common": ["./src/edge/common/index.ts"],
+      "@Edge/Common": ["./src/edge/common/index.ts"],
       "@EdgeSymbols": ["./src/edge/ioc/ioc.edge.symbols.ts"],
       "@EdgeContainer": ["./src/edge/ioc/ioc.edge.ts"],
       "@Edge/Types": ["./types/edge/index.d.ts"],
       "@Edge/Package": ["./src/edge/packages/packages.ts"],
       "@Edge/Package/Types": ["./types/edge/packages/packages.ts"],
 
+      // Common
+      "@Vendor": ["./src/edge/vendor/index.ts"],
+      "@Vendor/Types": ["./types/edge/vendor/index.d.ts"],
+      "@Utility/Types": ["./types/common/index.d.ts"],
+
+      // Schema
+      "@Schema/*": ["./src/schema/*"]
     }
   },
   "include": [
