--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
       "@Utility/Types": ["./types/common/index.d.ts"],
 
       // Schema
-      "@Schema/*": ["./src/schema/*"]
+      "@Schema/*": ["./src/schema/*"],
+      "@Schema/Types/*": ["./types/schema/*"]
     }
   },
   "include": [
