--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vladyslav Pestsov<vladyslav.pestsov@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "inversify": "^6.0.2",
     "next": "14.0.3",
