feat(edge): {StoragePorts} - add localStorage and sessionStorage strategies and inject it to fnAgent

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
 
       // Edge
       "@Edge/Common": ["./src/edge/common/index.ts"],
+      "@Edge/Utils": ["./src/edge/utils/index.ts"],
       "@EdgeSymbols": ["./src/edge/ioc/ioc.edge.symbols.ts"],
       "@EdgeContainer": ["./src/edge/ioc/ioc.edge.ts"],
       "@Edge/Types": ["./types/edge/index.d.ts"],
