--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Web-client for thunder platform",
   "main": "index.js",
   "scripts": {
-    "next:dev": "ts-node -r tsconfig-paths/register --files ./src/server/server.ts"
+    "next:dev": "NODE_ENV=development THUNDER_SCHEMA_PROFILE=thunder ts-node -r tsconfig-paths/register --files ./src/server/server.ts"
   },
   "keywords": [],
   "author": "Vladyslav Pestsov<vladyslav.pestsov@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "inversify": "^6.0.2",
     "next": "14.0.3",
@@ -19,6 +20,7 @@
     "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
+    "@types/config": "^3.3.3",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.45",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
