--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Vladyslav Pestsov<vladyslav.pestsov@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.2",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.16",
     "fs-extra": "^11.2.0",
     "inversify": "^6.0.2",
     "next": "14.0.3",
