chore(dependencies): install zustand@4.4.7

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "reflect-metadata": "^0.2.1"
+    "reflect-metadata": "^0.2.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/config": "^3.3.3",
