--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,8 @@
       "@Vendor": ["./src/edge/vendor/index.ts"],
       "@Vendor/Types": ["./types/edge/vendor/index.d.ts"],
       "@Utility/Types": ["./types/common/index.d.ts"],
+      "@Setters": ["./src/edge/setters/index.ts"],
+      "@Setters/Types": ["./types/edge/setters/index.d.ts"],
 
       // Schema
       "@Schema/*": ["./src/schema/*"],
