feat(edge): {SysUsers} - started implement sys users dataset from next ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,7 @@
 
       // Schema
       "@Schema/*": ["./src/schema/*"],
+      "@Ui": ["./src/schema/ui/index.ts"],
       "@Schema/Types/*": ["./types/schema/*"]
     }
   },
