--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
+    "@sentry/nextjs": "^7.91.0",
     "axios": "^1.6.2",
     "config": "^3.3.9",
     "express": "^4.18.2",
