--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "thunder-web-client",
-  "version": "1.0.0",
-  "description": "Web-client for thunder platform",
-  "main": "index.js",
+  "name": "@chaminjector/web-client",
+  "version": "1.0.3",
+  "description": "Web-client for @chaminjector platform",
+  "main": "./dist/server/main.js",
   "scripts": {
-    "next:dev": "NODE_ENV=development SCHEMA_PROFILE=thunder ts-node -r tsconfig-paths/register --files ./src/server/server.ts"
+    "start:dev": "NODE_ENV=development SCHEMA_PROFILE=sys_admin ts-node -r tsconfig-paths/register --files ./src/server/main.ts",
+    "build": "rm -rf dist && tsc",
+    "publish": "npm publish --access public"
   },
+  "files": ["dist", "types"],
   "keywords": [],
   "author": "Vladyslav Pestsov<vladyslav.pestsov@gmail.com>",
   "license": "ISC",
