refactor: fix many simply options between edge - schema / server - schema

--- a/packages/server/configs/visualizer.development.config.json
+++ b/packages/server/configs/visualizer.development.config.json
@@ -1,7 +1,8 @@
 {
   "services": {
       "schema": {
-        "schemaPath": "saasa"
+        "schemaPath": "saasa",
+        "schemaDir": "sasasaas"
       }
   },
   "adapters": {
