--- a/packages/edge/package.json
+++ b/packages/edge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chaminjector/web-client",
-  "version": "1.0.14",
+  "version": "1.0.17",
   "description": "Web-client for @chaminjector platform frontend schemas.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -8,10 +8,9 @@
     "./*"
   ],
   "keywords": [
-    "thunder-platform",
-    "web-client-machine",
-    "core",
-    "compute-schema-resolver"
+    "@chaminjector",
+    "@chaminjector/web-client",
+    "@chaminjector/core"
   ],
   "exports": {
     ".": {
