--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chaminjector/visualizer",
-  "version": "0.0.2",
+  "version": "0.0.9",
   "description": "Web-client for @chaminjector platform frontend schemas.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -8,13 +8,12 @@
     "./*"
   ],
   "keywords": [
-    "thunder-platform",
-    "web-client-machine",
-    "core",
-    "compute-schema-resolver"
+    "@chaminjector",
+    "@chaminjector/web-client",
+    "@Chaminjector/core"
   ],
   "exports": {
-    ".":  {
+    ".": {
       "types": "./_types/*.d.ts",
       "node": "./_cjs/index.js",
       "require": "./_cjs/index.js",
@@ -35,7 +34,7 @@
   },
   "license": "ISC",
   "scripts": {
-    "start:dev": "NODE_ENV=development SCHEMA_PROFILE=sys_admin ts-node -r tsconfig-paths/register --files src/server/index.ts",
+    "start:dev": "NODE_ENV=development SCHEMA_PROFILE=sys_admin ts-node -r tsconfig-paths/register --files src/index.ts",
     "build:packages": "rm -rf dist && tsc -p tsconfig.cjs.json && tsc -p tsconfig.types.json && cp package.json dist/package.json",
     "add:types": "cp -r types dist/types",
     "add:imports": "echo 'export * from \"../types\";' >> ./dist/_types/index.d.ts",
@@ -46,15 +45,15 @@
     "start:prod": "node ./_cjs/index.js"
   },
   "dependencies": {
+    "@chaminjector/seeds-discovery-service": "^0.0.11",
     "axios": "^1.6.2",
-    "config": "^3.3.9",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "inversify": "^6.0.2",
+    "next": "^14.0.4",
     "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
-    "@types/config": "^3.3.3",
     "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "ts-node": "^10.9.2",
