--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,27 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "module": "CommonJS",
     "allowJs": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
     "strict": true,
-    "newLine": "lf",
     "esModuleInterop": true,
+    "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "baseUrl": "./",
-    "rootDir": "./src",
+    "jsx": "preserve",
+    "incremental": true,
     "paths": {
       "@Server/Symbols": [
         "./src/ioc/ioc.server.symbols.ts"
@@ -36,16 +33,13 @@
         "./types/index.d.ts"
       ]
     },
-    "noEmit": false,
-    "incremental": true
   },
   "include": [
     "next-env.d.ts",
-    "./src/**/*",
-    "./server/**/*.d.ts"
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
   ],
   "exclude": [
-    "node_modules",
-    "src/pages"
+    "node_modules"
   ]
 }
