--- a/packages/edge/package.json
+++ b/packages/edge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chaminjector/web-client",
-  "version": "1.0.30",
+  "version": "1.0.46",
   "description": "Web-client for @chaminjector platform frontend schemas.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -49,6 +49,7 @@
     "@sentry/nextjs": "^7.91.0",
     "axios": "^1.6.2",
     "inversify": "^6.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
