--- a/src/package.json
+++ b/src/package.json
@@ -46,7 +46,9 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "eventemitter3": "^5.0.1",
     "inversify": "^6.0.2",
+    "joi": "^17.13.1",
     "jwt-decode": "^4.0.0",
     "reflect-metadata": "^0.2.1",
     "zod": "^3.22.4",
